--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,7 @@ textarea {
 
 
 html {
-  background-color: #fff;
+  background-color: rgb(0, 0, 0);
   height: 100%;
 }
 
@@ -110,7 +110,7 @@ body {
 
 .wrapper {
   /*add display:flex and set justify-content to space-between*/
-  font-weight: 700;
+  font-weight: 400;
   display: flex;
   justify-content: space-between;
 }
@@ -123,10 +123,18 @@ body {
   width: 30%;
   color: #fff;
   line-height: 1.5em;
-  font-size: 1.6em;
-  background-color: #f16059;
+  font-size: 1.2em;
+  background-color: #000000;
   height: 300px;
 }
+
+.line {
+    height: 230px;
+    flex: 1;
+    background: #808080;
+    margin: 0 29px;
+    align-self: center;
+  }
 
 
 
